# rivabot-rs

./: Cargo.toml
migrations/: 20231002084844_commands.sql  20231002085354_responses.sql  20231004081648_seed_commands.sql  20231107062420_users.sql  20231107194624_auths.sql  20231107194843_commands.sql  20231109121621_seed_commands.sql
src/: auth.rs  bot.rs  command.rs  db.rs  lib.rs  main.rs  response.rs  user.rs
